--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "codetech/laravel-eupago",
+  "name": "tugamars/laravel-eupago",
   "description": "A Laravel package for making payments through the EuPago API.",
   "keywords": [
     "eupago",
